--- a/src/modules/container-link/editor.scss
+++ b/src/modules/container-link/editor.scss
@@ -1,4 +1,4 @@
-#editor .ugb-container-link {
+.block-editor-page .ugb-container-link {
 	& > a {
 		display: none;
 	}
